--- a/style.css
+++ b/style.css
@@ -75,4 +75,20 @@ p{
 .wins{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+}
+
+#reset{
+    background-color: #dc3d2a;
+    border: none;
+    padding: 0.5rem;
+    border-radius: 20%;
+    height: 3rem;
+    width: 5rem;
+}
+#reset:active{
+    background: radial-gradient(border-box at 5px 5px, white, black);
+}
+#reset:enabled{
+    outline: none;
 }
