--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
     font-family: 'Anton', sans-serif;
 }
 
-html{
-    background-color: #dc3d2a;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg fill-opacity='0.96'%3E%3Cpolygon fill='%23b0552a' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23846c2b' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%2358842b' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%232c9b2c' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2300b32c' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
+:root{
+    --theme-red: #690808;
+    --text-outline: black 1px;
 }
+
+html{
+    background-color: #000000;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='550' height='550' viewBox='0 0 200 200'%3E%3Cg fill='none' stroke='%23e90b0b' stroke-width='1.1' stroke-opacity='0.23'%3E%3Crect x='-40' y='40' width='75' height='75'/%3E%3Crect x='-35' y='45' width='65' height='65'/%3E%3Crect x='-30' y='50' width='55' height='55'/%3E%3Crect x='-25' y='55' width='45' height='45'/%3E%3Crect x='-20' y='60' width='35' height='35'/%3E%3Crect x='-15' y='65' width='25' height='25'/%3E%3Crect x='-10' y='70' width='15' height='15'/%3E%3Crect x='-5' y='75' width='5' height='5'/%3E%3Crect width='35' height='35'/%3E%3Crect x='5' y='5' width='25' height='25'/%3E%3Crect x='10' y='10' width='15' height='15'/%3E%3Crect x='15' y='15' width='5' height='5'/%3E%3Crect x='40' width='75' height='75'/%3E%3Crect x='45' y='5' width='65' height='65'/%3E%3Crect x='50' y='10' width='55' height='55'/%3E%3Crect x='55' y='15' width='45' height='45'/%3E%3Crect x='60' y='20' width='35' height='35'/%3E%3Crect x='65' y='25' width='25' height='25'/%3E%3Crect x='70' y='30' width='15' height='15'/%3E%3Crect x='75' y='35' width='5' height='5'/%3E%3Crect x='40' y='80' width='35' height='35'/%3E%3Crect x='45' y='85' width='25' height='25'/%3E%3Crect x='50' y='90' width='15' height='15'/%3E%3Crect x='55' y='95' width='5' height='5'/%3E%3Crect x='120' y='-40' width='75' height='75'/%3E%3Crect x='125' y='-35' width='65' height='65'/%3E%3Crect x='130' y='-30' width='55' height='55'/%3E%3Crect x='135' y='-25' width='45' height='45'/%3E%3Crect x='140' y='-20' width='35' height='35'/%3E%3Crect x='145' y='-15' width='25' height='25'/%3E%3Crect x='150' y='-10' width='15' height='15'/%3E%3Crect x='155' y='-5' width='5' height='5'/%3E%3Crect x='120' y='40' width='35' height='35'/%3E%3Crect x='125' y='45' width='25' height='25'/%3E%3Crect x='130' y='50' width='15' height='15'/%3E%3Crect x='135' y='55' width='5' height='5'/%3E%3Crect y='120' width='75' height='75'/%3E%3Crect x='5' y='125' width='65' height='65'/%3E%3Crect x='10' y='130' width='55' height='55'/%3E%3Crect x='15' y='135' width='45' height='45'/%3E%3Crect x='20' y='140' width='35' height='35'/%3E%3Crect x='25' y='145' width='25' height='25'/%3E%3Crect x='30' y='150' width='15' height='15'/%3E%3Crect x='35' y='155' width='5' height='5'/%3E%3Crect x='200' y='120' width='75' height='75'/%3E%3Crect x='40' y='200' width='75' height='75'/%3E%3Crect x='80' y='80' width='75' height='75'/%3E%3Crect x='85' y='85' width='65' height='65'/%3E%3Crect x='90' y='90' width='55' height='55'/%3E%3Crect x='95' y='95' width='45' height='45'/%3E%3Crect x='100' y='100' width='35' height='35'/%3E%3Crect x='105' y='105' width='25' height='25'/%3E%3Crect x='110' y='110' width='15' height='15'/%3E%3Crect x='115' y='115' width='5' height='5'/%3E%3Crect x='80' y='160' width='35' height='35'/%3E%3Crect x='85' y='165' width='25' height='25'/%3E%3Crect x='90' y='170' width='15' height='15'/%3E%3Crect x='95' y='175' width='5' height='5'/%3E%3Crect x='120' y='160' width='75' height='75'/%3E%3Crect x='125' y='165' width='65' height='65'/%3E%3Crect x='130' y='170' width='55' height='55'/%3E%3Crect x='135' y='175' width='45' height='45'/%3E%3Crect x='140' y='180' width='35' height='35'/%3E%3Crect x='145' y='185' width='25' height='25'/%3E%3Crect x='150' y='190' width='15' height='15'/%3E%3Crect x='155' y='195' width='5' height='5'/%3E%3Crect x='160' y='40' width='75' height='75'/%3E%3Crect x='165' y='45' width='65' height='65'/%3E%3Crect x='170' y='50' width='55' height='55'/%3E%3Crect x='175' y='55' width='45' height='45'/%3E%3Crect x='180' y='60' width='35' height='35'/%3E%3Crect x='185' y='65' width='25' height='25'/%3E%3Crect x='190' y='70' width='15' height='15'/%3E%3Crect x='195' y='75' width='5' height='5'/%3E%3Crect x='160' y='120' width='35' height='35'/%3E%3Crect x='165' y='125' width='25' height='25'/%3E%3Crect x='170' y='130' width='15' height='15'/%3E%3Crect x='175' y='135' width='5' height='5'/%3E%3Crect x='200' y='200' width='35' height='35'/%3E%3Crect x='200' width='35' height='35'/%3E%3Crect y='200' width='35' height='35'/%3E%3C/g%3E%3C/svg%3E");}
 
 /* Header Styles */
 
@@ -18,33 +20,51 @@ header{
     text-align: center;
     text-transform: uppercase;
     font-size: 2rem;
+    color: var(--theme-red);
+    width: 20rem;
+    margin: 0 auto;
+    -webkit-text-stroke: var(--text-outline);
 }
 
 /* Turn Info Styles */
 
 #player, #turn{
+    font-size: 1.5rem;;
     text-align: center;
+    color: var(--theme-red);
+    -webkit-text-stroke: var(--text-outline);
 }
 
 /* Game Board Styles */
 
 .gameContainer{
-    margin: 20px auto;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(3, 150px);
     width: fit-content;
-    background-color: rgba(0, 0, 0, 10%);
+    background-color: rgba(0, 0, 0, 40%);
     border-radius: 10%;
 }
 
 .square{
     width: auto;
     height: auto;
-    border: 2px black solid;
+    border: 2px var(--theme-red) solid;
     text-align: center;
     font-size: 6.5rem;
+    color: var(--theme-red);
 }
+
+.xMark{
+    color: var(--theme-red);
+    -webkit-text-stroke: var(--text-outline);
+}
+.oMark{
+    color: black;
+    -webkit-text-stroke: 2px var(--theme-red);
+}
+
 
 .left{
     border-left: none;
@@ -70,16 +90,18 @@ header{
 
 p{
     text-align: center;
+    color: var(--theme-red)
 }
 
 .wins{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 1.25rem;
 }
 
 #reset{
-    background-color: #dc3d2a;
+    background-color: var(--theme-red);
     border: none;
     padding: 0.5rem;
     border-radius: 20%;
@@ -91,4 +113,13 @@ p{
 }
 #reset:enabled{
     outline: none;
+}
+
+/* Winner Styles */
+
+.winningMark{
+    border-radius: 50%;
+    background-color: var(--theme-red);
+    color: var(--theme-red);
+    -webkit-text-stroke: black 3px;
 }
